# MiniStudio

./: .gitignore  CMakeLists.txt  README.md
mainFile/: CMakeLists.txt
mainFile/src/: main.cpp
mylib/: CMakeCache.txt  CMakeLists.txt
mylib/include/: Animation.h  Arrow.h  AudioManager.h  Camera.h  Collision.h  Component.h  Composite.h  Decoration.h  Effect.h  Enemy.h  EnemyState.h  Engine.h  Game.h  GameObject.h  Hero.h  HeroState.h  IEnemy.h  IGameObject.h  Map.h  Menu.h  ObjectBT.h  Projectile.h  SceneBase.h  SceneManager.h  StateManager.h  TextureManager.h  Tiles.h  UI.h
mylib/src/: Animation.cpp  Arrow.cpp  AudioManager.cpp  Camera.cpp  Collision.cpp  Component.cpp  Composite.cpp  Decoration.cpp  Effect.cpp  Enemy.cpp  EnemyState.cpp  Engine.cpp  Game.cpp  GameObject.cpp  Hero.cpp  HeroState.cpp  IEnemy.cpp  Map.cpp  Menu.cpp  PathManager.cpp  Projectile.cpp  SceneBase.cpp  SceneManager.cpp  StateManager.cpp  TextureManager.cpp  Tiles.cpp  UI.cpp
resources/Map/: herbe.psd
